docs: Update models in swagger docs
